<resources>
    <string name="app_name">TicTacToe</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="reset">Reset</string>
    <string name="not_yet">not yet</string>
    <string name="highest_scores">Highest Scores</string>
    <string name="_3">3</string>
    <string name="_7">7</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_6">6</string>
    <string name="enter_ur_name">Enter ur Name</string>
    <string name="enter">Enter</string>
    <string name="list_of_highest_scores">List of highest Scores</string>
    <string name="home">Home</string>
    <string name="textview">TextView</string>
</resources>